# taunote

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: main.rs
core/src/assets/: schema.sql
core/src/services/: mod.rs
core/src/services/audio/: ffmpeg.rs
core/src/services/database/: mod.rs  models.rs  queries.rs  schema.rs
core/src/services/llm/: llama_client.rs  llama_queue.rs  mod.rs  prompt_tasks.rs
core/src/services/summarizer/: llama_client.rs
core/src/services/transcribe/: whisper.rs  whisperx.rs
core/src/utils/: config.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: commands.rs  lib.rs
frontend/src/components/: ProjectView.tsx  Rightbar.tsx  Sidebar.tsx  Topbar.tsx  WelcomeView.tsx
python_backend/: env.yaml  whisperx_runner.py
src/: audio.rs  main.rs  whisper.rs
src/services/: mod.rs
src/services/audio/: ffmpeg.rs
src/services/summarizer/: mod.rs
src/services/transcribe/: mod.rs
