[package]
name = "taunote"
version = "0.1.0"
authors = ["Andrea Gonzalez Varela <agvarela@seas.upenn.edu>"]
edition = "2024"
description = "CLI tool for local STT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"