[package]
name = "taunote"
version = "0.1.0"
authors = ["Andrea Gonzalez Varela <agvarela@seas.upenn.edu>"]
edition = "2021"
description = "Core logic for local STT + AI summary"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.37"
directories-next = "2.0"
chrono = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }
sysinfo = "0.36.1"
once_cell = "1.21.3"
anyhow = "1.0.98"